# cp-handbook

./: .clang-format  .clang-tidy  .gitignore  README.md
book_examples/: max_subarr_sum.py
book_examples/bubble_sort/: bubble_sort.cpp  bubble_sort.py
cpp_src/Sortings/: apartment.cpp  distinct_numbers.cpp
py_src/: pyproject.toml
py_src/Sortings/: apartments.py  distinct_numbers.py
