[project]
name = "py-src"
version = "0.1.0"
description = "Solutions in Python"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
# Set the maximum line length to 100.
line-length = 100

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true